# Copyright (C) 2003, International Business Machines and others.
# All Rights Reserved.
# This file is distributed under the Common Public License.

## $Id: Makefile.am 632 2004-07-20 23:52:15Z andreasw $

AUTOMAKE_OPTIONS = foreign

SUBDIRS = include ipopt CUTEr_interface

if BUILDAMPLINTERFACE
  SUBDIRS += AMPL_interface
endif
